ci: Surface lint and test results to comment
It's a bit annoying how you have to go to the workflow result to see the lint error and test results. This surfaces it to the comment in the PR.

--- a/.github/actions/lint-check/action.yml
+++ b/.github/actions/lint-check/action.yml
@@ -65,8 +65,15 @@ runs:
         )
         echo "$summary" >> $GITHUB_STEP_SUMMARY
 
-        file="ci_summary.md"
-        echo "❌🛠️ \`clang-format\`: Lint errors, fix available." >> $file
+        pr_comment=$(cat <<EOF
+        ### Lint result
+        
+        $summary
+        EOF
+        )
+
+        file="ci-summary.md"
+        echo "$pr_comment" | tee $file
         echo "file=$file" >> $GITHUB_OUTPUT
       shell: bash
 
