ci: Fix naming conventions for step names and bash vars

--- a/.github/actions/test-summary/action.yml
+++ b/.github/actions/test-summary/action.yml
@@ -29,7 +29,7 @@ runs:
 
         header=$(cat <<EOF
         # Test results
-        | Job name | Unit tests | Integration tests |
+        | OS | Unit tests | Legacy tests |
         | --- | --- | --- |
         EOF
         )
