--- a/src/unittests/base/CMakeLists.txt
+++ b/src/unittests/base/CMakeLists.txt
@@ -30,10 +30,10 @@ create_test(
 )
 
 create_test(
-  NAME XBaseTests
+  NAME BaseExceptionTests
   DEPENDS base
   LIBS arch
-  SOURCE XBaseTests.cpp
+  SOURCE BaseExceptionTests.cpp
   WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/src/lib/base"
 )
 
