--- a/.github/workflows/sonarcloud-analysis.yml
+++ b/.github/workflows/sonarcloud-analysis.yml
@@ -26,10 +26,7 @@ jobs:
     timeout-minutes: 20
 
     env:
-      SONAR_SCANNER_VERSION: 6.1.0.4477
-      SONAR_SCANNER_OPTS: -server
-      SONAR_SCANNER_URL_BASE: https://binaries.sonarsource.com/Distribution/sonar-scanner-cli
-      CPU_CORE_COUNT: ${{ vars.SONAR_SCANNER_CPU_COUNT || 4 }}
+      CPU_CORE_COUNT: 4
 
     steps:
       - name: Install container dependencies
@@ -45,8 +42,8 @@ jobs:
         with:
           like: "debian"
 
-      - name: Install sonar-scanner and build-wrapper
-        uses: sonarsource/sonarcloud-github-c-cpp@v3
+      - name: Install Build Wrapper
+        uses: SonarSource/sonarqube-scan-action/install-build-wrapper@v6
 
       - name: Configure
         run: |
@@ -81,11 +78,11 @@ jobs:
           fi
           echo "csv=$paths" >> $GITHUB_OUTPUT
 
-      - name: Run SonarScanner
-        run: |
-          export PATH=$HOME/.sonar/sonar-scanner-$SONAR_SCANNER_VERSION-linux-x64/bin:$PATH
-          sonar-scanner \
-            -Dsonar.coverageReportPaths=${{ steps.coverage-paths.outputs.csv }} \
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v6
+        with:
+          args: >
+            -Dsonar.coverageReportPaths=${{ steps.coverage-paths.outputs.csv }}
             -Dsonar.cfamily.threads=${{ env.CPU_CORE_COUNT }}
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
