--- a/.github/workflows/sonarcloud-analysis.yml
+++ b/.github/workflows/sonarcloud-analysis.yml
@@ -18,7 +18,9 @@ on:
     branches: [master]
 
 jobs:
-  sonarcloud-analysis:
+  analyze:
+    # This job would fail for contributors who open PRs as the workflow runs outside of our repo
+    # in this scenario. Having a var that only we set to true prevents this job from running.
     if: ${{ vars.SONAR_SCANNER_ENABLED }}
 
     runs-on: ubuntu-latest
