--- a/REUSE.toml
+++ b/REUSE.toml
@@ -26,6 +26,7 @@ path = [
  , "src/apps/deskflow-server/deskflow-server.exe.manifest"
  , "src/apps/res/manpage.txt"
  , "src/apps/res/deskflow.plist.in"
+ , "translations/*.ts"
 ]
 SPDX-FileCopyrightText = "Deskflow Developers"
 SPDX-License-Identifier = "MIT"
