--- a/src/apps/deskflow-gui/CMakeLists.txt
+++ b/src/apps/deskflow-gui/CMakeLists.txt
@@ -49,13 +49,16 @@ target_link_libraries(
   Qt6::Widgets
   Qt6::Network)
 
+install(
+  TARGETS ${target}
+  RUNTIME_DEPENDENCY_SET guiDeps
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+  BUNDLE DESTINATION .
+)
+
 if(WIN32)
   set_target_properties(${target} PROPERTIES LINK_FLAGS "/NODEFAULTLIB:LIBCMT")
-  install(
-    TARGETS ${target}
-    RUNTIME_DEPENDENCY_SET guiDeps
-    DESTINATION .
-  )
+
   install(RUNTIME_DEPENDENCY_SET guiDeps
     PRE_EXCLUDE_REGEXES
       "api-ms-win-.*"
@@ -63,7 +66,7 @@ if(WIN32)
       "^hvsifiletrust\\.dll$"
     POST_EXCLUDE_REGEXES
       ".*system32.*"
-    RUNTIME DESTINATION .
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
   )
 
   set(QT_DEPENDS_DIR ${CMAKE_BINARY_DIR}/qt-depends)
@@ -85,7 +88,7 @@ if(WIN32)
 
   install(
     DIRECTORY ${QT_DEPENDS_DIR}/
-    DESTINATION .
+    DESTINATION ${CMAKE_INSTALL_BINDIR}
     PATTERN "dx*.dll" EXCLUDE
   )
 
@@ -94,7 +97,6 @@ elseif(APPLE)
     INSTALL_RPATH "@loader_path/../Libraries;@loader_path/../Frameworks"
     MACOSX_BUNDLE_INFO_PLIST "${CMAKE_CURRENT_BINARY_DIR}/deskflow.plist"
   )
-  install(TARGETS ${target} BUNDLE DESTINATION .)
 
   # Warning: Do not use for CI/production, as the `entitlements-dev.plist` file adds special 
   # entitlements that are only appropriate for local development.
@@ -123,6 +125,5 @@ elseif(APPLE)
     )
   endif()
 else()
-  install(TARGETS ${target} DESTINATION bin)
   generate_app_man(${target} "${CMAKE_PROJECT_DESCRIPTION} \\(GUI\\)")
 endif()
