--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -162,12 +162,14 @@ configure_libs()
 # setup install paths
 include(GNUInstallDirs)
 if (WIN32)
+  set(CMAKE_INSTALL_BINDIR .)
   set(CMAKE_INSTALL_LICENSE_DIR .)
   set(CMAKE_INSTALL_I18N_DIR translations)
 elseif(UNIX AND NOT APPLE)
   set(CMAKE_INSTALL_LICENSE_DIR ${CMAKE_INSTALL_DATADIR}/licenses/${CMAKE_PROJECT_NAME})
   set(CMAKE_INSTALL_I18N_DIR ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/translations)
 else()
+  set(CMAKE_INSTALL_BINDIR $<TARGET_BUNDLE_CONTENT_DIR:${CMAKE_PROJECT_PROPER_NAME}>/MacOS)
   set(CMAKE_INSTALL_LICENSE_DIR $<TARGET_BUNDLE_CONTENT_DIR:${CMAKE_PROJECT_PROPER_NAME}>/Resources)
   set(CMAKE_INSTALL_I18N_DIR $<TARGET_BUNDLE_CONTENT_DIR:${CMAKE_PROJECT_PROPER_NAME}>/MacOS/translations)
 endif()
