fix: Split XKB code out of XWindowsUtil to allow building without X11 the xprotoheaders are still required for EI, but nothing more.

--- a/src/lib/platform/CMakeLists.txt
+++ b/src/lib/platform/CMakeLists.txt
@@ -97,6 +97,8 @@ elseif(UNIX)
     XDGPortalRegistry.h
     XDGPowerManager.cpp
     XDGPowerManager.h
+    XDGKeyUtil.h
+    XDGKeyUtil.cpp
     XWindowsClipboard.cpp
     XWindowsClipboard.h
     XWindowsClipboardAnyBitmapConverter.cpp
