feat: mac os new build option BUILD_OSX_BUNDLE can be disabled to build a non app bundle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,6 +160,8 @@ add_definitions(-DQT_NO_KEYWORDS)
 #Options for Linux platform support
 if(UNIX AND NOT APPLE)
   option(BUILD_X11_SUPPORT "Build with x11 support" ON)
+elseif (APPLE)
+  option(BUILD_OSX_BUNDLE "Build mac os bundle" ON)
 endif()
 
 include(cmake/Libraries.cmake)
@@ -172,13 +174,12 @@ if (WIN32)
   set(CMAKE_INSTALL_LIBDIR .)
   set(CMAKE_INSTALL_LICENSE_DIR .)
   set(CMAKE_INSTALL_I18N_DIR translations)
-elseif(UNIX AND NOT APPLE)
-  set(CMAKE_INSTALL_LICENSE_DIR ${CMAKE_INSTALL_DATADIR}/licenses/${CMAKE_PROJECT_NAME})
-  set(CMAKE_INSTALL_I18N_DIR ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/translations)
-else()
+elseif(BUILD_OSX_BUNDLE)
   set(CMAKE_INSTALL_BINDIR ${CMAKE_PROJECT_PROPER_NAME}.app/Contents/MacOS)
   set(CMAKE_INSTALL_LICENSE_DIR ${CMAKE_PROJECT_PROPER_NAME}.app/Contents/Resources)
-  set(CMAKE_INSTALL_I18N_DIR ${CMAKE_PROJECT_PROPER_NAME}.app/Contents/MacOS/translations)
+else()
+  set(CMAKE_INSTALL_LICENSE_DIR ${CMAKE_INSTALL_DATADIR}/licenses/${CMAKE_PROJECT_NAME})
+  set(CMAKE_INSTALL_I18N_DIR ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/translations)
 endif()
 
 add_subdirectory(doc)
