refactor: Abstract IPC server logic

--- a/src/lib/deskflow/CMakeLists.txt
+++ b/src/lib/deskflow/CMakeLists.txt
@@ -81,6 +81,8 @@ add_library(${lib_name} STATIC ${PLATFORM_CODE}
   StreamChunker.h
   languages/LanguageManager.cpp
   languages/LanguageManager.h
+  ipc/IpcServer.cpp
+  ipc/IpcServer.h
   ipc/DaemonIpcServer.cpp
   ipc/DaemonIpcServer.h
 )
