wip: Create Core IPC classes

--- a/src/lib/common/Constants.h.in
+++ b/src/lib/common/Constants.h.in
@@ -23,6 +23,7 @@ const auto kCopyright = //
     "Copyright (C) 2002-2009 Chris Schoeneman";
 
 const auto kCoreBinName = "@CORE_BINARY@";
+const auto kCoreIpcName = "@CMAKE_PROJECT_NAME@-core";
 
 const auto kTlsDirName = "tls";
 const auto kTlsCertificateFilename = "@CMAKE_PROJECT_NAME@.pem";
