build: unset GITREV after use

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/.git)
       elseif(NOT ${GITREV} STREQUAL "")
         set(DESKFLOW_VERSION_TWEAK ${GITREV})
       endif()
+      unset(GITREV)
     endif()
   endif()
 endif()
