build: macos, add app to the utilities category

--- a/src/apps/res/deskflow.plist.in
+++ b/src/apps/res/deskflow.plist.in
@@ -30,6 +30,8 @@
 	<true/>
 	<key>NSHumanReadableCopyright</key>
 	<string>@BUNDLE_COPYRIGHT@</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.utilities</string>
 
 	<!-- Prevent macOS from terminating during memory pressure -->
 	<key>NSSupportsAutomaticTermination</key>
